# OptimalLeads-platform

./: .env.example  .gitignore  .instructions.md  README.md  bootstrap.py  docker-compose.yml  logging_setup.py  main.py  pyproject.toml  start_workspace.cmd  start_workspace.ps1  telemetry.py
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  EXAMPLES_LIVE.md  OBSERVABILITY.md  OPTIMALLEADS_OPERATIONS.md  PRINCIPLES.md
hosts/aura_host/: pyproject.toml
hosts/fastapi_host/: pyproject.toml
hosts/fastapi_host/src/fastapi_host/: app.py  dependencies.py  dependency_injection.py  program.py
hosts/fastapi_host/src/fastapi_host/routers/: chat.py
hosts/mcp_host/: pyproject.toml
hosts/mcp_host/src/mcp_host/: server.py  server_real.py
projects/etrto/: __init__.py  main.py
projects/etrto/application/: __init__.py
projects/etrto/domain/: __init__.py
projects/etrto/drivers/: __init__.py
projects/etrto/infrastructure/: __init__.py
projects/etrto/presentation/: __init__.py
projects/optimalleads/: TESTING_OPTIMALLEADS.md  __init__.py  bootstrap.sql  bootstrap_databases.sql  constants.py  main.py
projects/optimalleads/Requests/: analytics.http  chat.http  leads.http  saga.http
projects/optimalleads/analytics/: .env  .env.example  __init__.py  main.py  settings.py
projects/optimalleads/chat/: .env  .env.example  __init__.py  main.py  settings.py
projects/optimalleads/leads/: .env  .env.example  __init__.py  main.py  settings.py
projects/optimalleads/saga/: .env.example  __init__.py  clients.py  constants.py  consumer.py  main.py  persistence.py  process_manager.py  settings.py
scripts/: bootstrap-optimalleads-deps.ps1  bootstrap-optimalleads-env.ps1  bootstrap-optimalleads-vscode.ps1  start_workspace.py
sql/: verify_optimalleads.sql
tests/chat/: test_use_cases.py
tests/optimalleads/analytics/: test_analytics_routes.py  test_analytics_use_cases.py  (+1 more)
tests/unit/: test_broker_adapters.py  test_multiple_hosts_same_core.py  test_optimalleads_saga.py  test_outbox_worker.py  test_physical_command_bus_example.py  test_saga_bridge.py
(+155 files in other folders)
