[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantion-workspace"
version = "0.1.0"
description = "Workspace multi-paquet amb core reutilitzable, projectes i hosts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "aiosqlite>=0.20.0",
  "faststream>=0.5.0",
  "faststream[kafka]>=0.5.0",
  "faststream[rabbit]>=0.5.0",
  "faststream[azure-servicebus]>=0.5.0",
  "openai>=1.40.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["packages/core_domain/src", "packages/core_application/src", "packages/core_infrastructure/src", "hosts/fastapi_host/src", "hosts/mcp_host/src", "hosts/aura_host/src", "projects"]
exclude = ["packages/llm_*", "src/app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
