[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-host"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "llm-application",
  "llm-infrastructure"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
